SSDM-2600: copy-pasted configuration from test target to the other test targets.
SVN: 35035